# FindCHOLMOD.cmake

./: .gitignore  .pre-commit-config.yml  FindCHOLMOD.cmake  LICENSE  README.md  pixi.toml
.github/workflows/: ci.yml
example/: CMakeLists.txt  main.c
scripts/: test-ubuntu.sh
test/: CMakeLists.txt
test-quiet/: CMakeLists.txt
test/detect/: CMakeLists.txt
